@@ -1,3 +1,9 @@
+2020-11-04  Jay Berkenbilt  <ejb@ql.org>
+
+	* Ignore the value of the offset/generation field in an xref entry
+	for a deleted object. Also attempt file recovery on lower-level
+	exceptions thrown while reading the xref table. Fixes #482.
+
 2020-10-31  Jay Berkenbilt  <ejb@ql.org>
 
 	* 10.0.3: release
